--- a/css/index.scss
+++ b/css/index.scss
@@ -12,7 +12,7 @@ $btn: rgb(7, 167, 118);
     box-sizing: border-box;
 }
 
-html,body {
+html, body {
     // display: flex;
     flex-direction: row;
     margin: 0;
@@ -21,7 +21,7 @@ html,body {
 }
 
 body.loginPage {
-    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url("https://dcatcher.me/assets/desk.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("https://dcatcher.me/assets/desk.jpg");
     background-size: cover;
     background-position: center center;
 }
@@ -42,7 +42,7 @@ nav.nav {
         top: 0;
         z-index: 99;
         transition: 0.4s transform;
-        box-shadow: 0px   4px  4px  2px    rgba(0, 0, 0, 0.125);
+        box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.125);
     }
     div.navLogo {
         position: relative;
@@ -61,7 +61,7 @@ nav.nav {
         img.logo {
             height: 2rem;
             // z-index: 104;
-            margin-right: 0.5rem
+            margin-right: 0.5rem;
         }
     }
 
@@ -92,12 +92,14 @@ nav.nav {
 
 nav.beyond {
     z-index: 100;
-    div.bg { transform: translateY(0px);}
+    div.bg {
+        transform: translateY(0px);
+    }
     div.navLogo {
 
         span {
-             color: #666;
-         }
+            color: #666;
+        }
     }
 }
 
@@ -106,7 +108,7 @@ div.header {
     background-image: url("https://dcatcher.me/assets/colosseum.jpg");
     background-size: cover;
     width: 100%;
-    background-position: center center;
+    background-position: center ;
     position: fixed;
     z-index: -1;
 
@@ -124,7 +126,6 @@ main {
     background-color: white;
 }
 
-
 a.mainButton {
     text-decoration: none;
     font-weight: 700;
@@ -132,17 +133,17 @@ a.mainButton {
     color: white;
     background-color: $btn;
     padding: 1rem;
-    box-shadow: 4px   4px  4px  2px    rgba(0, 0, 0, 0.2);
+    box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.2);
     transition: background 0.2s, box-shadow 0.2s;
     border-radius: 0.2rem;
 }
 
 a.mainButton:hover {
     background-color: darken($btn, 5%);
-    box-shadow: 4px   4px  4px  2px    rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.4);
 }
 
-main.loginMain{
+main.loginMain {
     height: 100%;
     display: flex;
     align-items: center;
@@ -183,3 +184,4 @@ label.forForm {
         z-index: 99;
     }
 }
+
