--- a/css/main.scss
+++ b/css/main.scss
@@ -894,7 +894,7 @@ form.appForm {
     flex-direction: column;
     label {
         display: inline-block;
-        justify-content: justify;
+        justify-content: center;
         padding: 0.2rem;
         // font-weight: bold;
         color: #333;
@@ -1435,7 +1435,7 @@ ul.categoryList {
 
 
 .bgPrimary {
-    background-color:  !important;
+    background-color: $primary !important;
     transition: background 0.1s;
 }
 
@@ -1617,7 +1617,7 @@ span.num-badge {
                 }
 
                 a:not(.icon) {
-                    font-style: none;
+                    font-style: normal;
                     display: flex;
                     justify-content: center;
                     padding: 1rem 0.5rem;
@@ -1840,4 +1840,10 @@ div.language-picker {
     border-radius: 1rem;
   background-color: darken(darkgrey, 10%);
   outline: 1px solid darken(slategrey, 10%);
+}
+
+
+object {
+    width: 15rem;
+    height: 15rem;
 }
