--- a/css/main.scss
+++ b/css/main.scss
@@ -677,6 +677,7 @@ div.language-selector {
         img.language-icon {
             width: 5rem;
             height: 5rem;
+            border-radius: 50% 50% 50% 0;
         }
     }
 
