--- a/css/main.scss
+++ b/css/main.scss
@@ -1076,6 +1076,7 @@ div.errorMessage {
     width: 1rem;
     max-height: 1rem;
     margin-right: 0.5rem;
+    border-radius: 50% 50% 50% 0;
 }
 
 
